# time-audit

./: .codecov.yml  .gitignore  CHANGELOG.md  DESIGN.md  PHASE2_PLAN.md  PHASE3_API_PLAN.md  README.md  agents.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: DAEMON.md  SECURITY.md
src/time_audit/: __init__.py  __main__.py
src/time_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/time_audit/analysis/: __init__.py  reports.py
src/time_audit/api/: __init__.py  auth.py  dependencies.py  middleware.py  models.py  server.py
src/time_audit/api/endpoints/: __init__.py  analytics.py  categories.py  entries.py  projects.py  reports.py  system.py
src/time_audit/automation/: __init__.py  idle_detector.py  notifier.py  process_detector.py  rule_engine.py
src/time_audit/cli/: __init__.py  api_commands.py  config_commands.py  daemon_commands.py  export_import_commands.py  main.py
src/time_audit/core/: __init__.py  config.py  models.py  storage.py  tracker.py
src/time_audit/daemon/: __init__.py  daemon.py  ipc.py  launchd.py  platform.py  state.py  systemd.py  windows_service.py
src/time_audit/export_import/: __init__.py  base.py  excel_format.py  ical_format.py  json_format.py  markdown_format.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_idle_detector.py  test_json_export_import.py  test_models.py  test_notifier.py  test_process_detector.py  test_process_rule.py  test_rule_engine.py  test_storage.py  test_tracker.py
tests/api/: __init__.py  test_api_foundation.py  test_endpoints_analytics.py  test_endpoints_entries.py  test_endpoints_projects_categories.py  test_endpoints_reports.py
tests/daemon/: __init__.py  test_ipc.py  test_platform.py  test_state.py
