[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-audit"
version = "0.1.0"
description = "Command-line time tracking application with automated process detection"
authors = [{name = "Time Audit Contributors"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["time-tracking", "productivity", "cli", "time-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0.0",
    "types-jsonschema>=4.0.0",
    "types-psutil>=5.0.0",
    "types-python-dateutil>=2.8.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
]
full = [
    "pynput>=1.7.0",
    "keyring>=23.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
time-audit = "time_audit.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/time-audit"
Documentation = "https://github.com/yourusername/time-audit#readme"
Repository = "https://github.com/yourusername/time-audit"
Issues = "https://github.com/yourusername/time-audit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=time_audit --cov-report=term-missing"
